Adicionando VLibras da forma correta

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />    <link rel="stylesheet" href="index.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>CUFA System</title>
+    <title>CUFA Conecta</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Estrutura necessária para o VLibras -->
     <div vw class="enabled">
       <div vw-access-button class="active"></div>
       <div vw-plugin-wrapper>
